--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
-    
+
     <div lass="row">
 
       <div type="button" id="green" class="btn green">
@@ -36,7 +36,8 @@
 
   </div>
 
-
+<script src="game.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
